--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+* {
+  text-decoration: none;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
